--- a/AUTHORS
+++ b/AUTHORS
@@ -3,4 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Aralu Kenechukwu <junioraralu@gmail.com>
-Olamide Lateef < >
+Olamide Lateef <lamibanu@gmail.com>
